adjusted the cv issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -728,7 +728,7 @@ h6 {
   margin-bottom: 5px;
 }
 .biography .details ul li span:first-child {
-  min-width: 120px;
+  /* min-width: 120px; */
   display: inline-block;
 }
 .biography .details ul li a {
